# OfflineASR

./: .gitignore  CMakeLists.txt  README.md  plan.md
cli/: CMakeLists.txt  main.cpp
cmake/: FindONNXRUNTIME.cmake  FindTensorRT.cmake
configs/: default.yaml
include/offline_asr/audio/: wav_reader.h
include/offline_asr/decoder/: ctc_wrapper.h  token_table.h
include/offline_asr/feature/: fbank_extractor.h  streaming_fbank_extractor.h
include/offline_asr/recognizer/: async_recognizer.h  endpoint_detector.h  itn.h  punctuation.h  recognizer.h  recognizer_config.h
include/offline_asr/runtime/: onnx_runtime.h  runtime.h  runtime_factory.h  tensorrt_runtime.h
include/offline_asr/utils/: logger.h  thread_pool.h  timer.h
include/offline_asr/vad/: energy_vad.h  vad.h
models/: tokens.txt
python/: dataset.py  export_onnx.py  infer.py  model.py  requirements.txt  train.py  train_librispeech.py  verify.py
src/audio/: wav_reader.cpp
src/decoder/: ctc_wrapper.cpp  token_table.cpp
src/feature/: fbank_extractor.cpp  streaming_fbank_extractor.cpp
src/recognizer/: async_recognizer.cpp  endpoint_detector.cpp  itn.cpp  punctuation.cpp  recognizer.cpp  recognizer_config.cpp
src/runtime/: onnx_runtime.cpp  runtime_factory.cpp  tensorrt_runtime.cpp
src/utils/: logger.cpp  thread_pool.cpp
src/vad/: energy_vad.cpp
tests/: CMakeLists.txt  test_async_recognizer.cpp  test_ctc_wrapper.cpp  test_endpoint_detector.cpp  test_fbank_extractor.cpp  test_itn.cpp  test_punctuation.cpp  test_recognizer_config.cpp  test_streaming_fbank.cpp  test_streaming_pipeline.cpp  test_tensorrt_runtime.cpp  test_token_table.cpp  test_vad.cpp
