# Define source dir for locating test data files
add_compile_definitions(TEST_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/..")

add_executable(test_token_table test_token_table.cpp)
target_link_libraries(test_token_table PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_token_table)

add_executable(test_fbank_extractor test_fbank_extractor.cpp)
target_link_libraries(test_fbank_extractor PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_fbank_extractor)

add_executable(test_ctc_wrapper test_ctc_wrapper.cpp)
target_link_libraries(test_ctc_wrapper PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_ctc_wrapper)

add_executable(test_recognizer_config test_recognizer_config.cpp)
target_link_libraries(test_recognizer_config PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_recognizer_config)

add_executable(test_streaming_fbank test_streaming_fbank.cpp)
target_link_libraries(test_streaming_fbank PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_streaming_fbank)

add_executable(test_streaming_pipeline test_streaming_pipeline.cpp)
target_link_libraries(test_streaming_pipeline PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_streaming_pipeline)

add_executable(test_vad test_vad.cpp)
target_link_libraries(test_vad PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_vad)

add_executable(test_async_recognizer test_async_recognizer.cpp)
target_link_libraries(test_async_recognizer PRIVATE offline_asr_core gtest_main)
gtest_discover_tests(test_async_recognizer)

if(ENABLE_TENSORRT)
    add_executable(test_tensorrt_runtime test_tensorrt_runtime.cpp)
    target_link_libraries(test_tensorrt_runtime PRIVATE offline_asr_core gtest_main)
    gtest_discover_tests(test_tensorrt_runtime)
endif()
